add_subdirectory(candevice)
add_subdirectory(canrawsender)
add_subdirectory(canrawview)
add_subdirectory(projectconfig)
add_subdirectory(canrawplayer)
add_subdirectory(canrawlogger)
add_subdirectory(canload)
add_subdirectory(cansignaldata)
add_subdirectory(cansignalencoder)
add_subdirectory(cansignaldecoder)
add_subdirectory(cansignalsender)
add_subdirectory(cansignalviewer)
